--- a/index.html
+++ b/index.html
@@ -7,17 +7,21 @@
 </head>
 <body>
     <header>
-
+        <h1>
+            Qualquer uma por 170!
+        </h1>
     </header>
     <main>
         <section>
            <article>
-            <img src="" alt="">
+            <img src="./camisetas/ajax.jpeg" alt="Ajax">
            </article>
         </section>
     </main>
     <footer>
-
+        <h1>
+            Fala comigo!
+        </h1>
     </footer>
 </body>
 </html>
