--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>170 QUALQUER UMA</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -12,11 +13,20 @@
         </h1>
     </header>
     <main>
-        <section>
-           <article>
+        <section class="shirts-box">
+           <article class="shirt">
             <img src="./camisetas/ajax.jpeg" alt="Ajax">
            </article>
+
+           <article class="shirt">
+            <img src="./camisetas/al-nassr.jpeg" alt="Al-nassr">
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/arsenal-2.jpeg" alt="Arsenal">
+           </article>
         </section>
+
     </main>
     <footer>
         <h1>
