--- a/index.html
+++ b/index.html
@@ -33,5 +33,8 @@
             Fala comigo!
         </h1>
     </footer>
+    <div class="whats">
+        <img src="./icones/wpp-ico.ico" alt="FALA COMIGO">
+    </div>
 </body>
 </html>
