--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </h1>
     </footer>
     <div class="whats">
-        <img src="./icones/wpp-ico.ico" alt="FALA COMIGO">
+        <a href="https://wa.me/5511975064491" target="_blank"><img class="wpp-ico" src="./icones/wpp-ico.ico" alt="FALA COMIGO"></a>
     </div>
 </body>
 </html>
