--- a/index.html
+++ b/index.html
@@ -10,9 +10,17 @@
 <body>
     <header>
         <h1>
-            Qualquer uma por 170!
+            Guiga Shirts
         </h1>
+        <h2>
+            QUALQUER PEITA 170R$<br>
+            4 PEÇAS POR 600R$
+        </h2>
     </header>
+    <nav>
+        <a class="futebol" href="#">Futebol &#x26BD</a>
+        <a class="basquete" href="#">Basquete &#x1F3C0</a>
+    </nav>
     <main>
         <section class="shirts-box">
            <article class="shirt">
