fundo e p das img

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <section class="shirts-box">
            <article class="shirt">
             <img src="./camisetas/ajax.jpeg" alt="Ajax">
+            <p>1 - Ajax</p>
            </article>
 
            <article class="shirt">
