--- a/index.html
+++ b/index.html
@@ -29,14 +29,145 @@
            </article>
 
            <article class="shirt">
-            <img src="./camisetas/ajax2.jpeg" alt="Al-nassr">
-            <p>2 Al-Nassr</p>
+            <img src="./camisetas/ajax2.jpeg" alt="Ajax">
+            <p>2 - Ajax</p>
            </article>
 
            <article class="shirt">
-            <img src="./camisetas/alemanha.jpeg" alt="Arsenal">
-            <p>3- Arsenal</p>
+            <img src="./camisetas/alemanha.jpeg" alt="Alemanha">
+            <p>3 - Alemanha</p>
            </article>
+
+           <article class="shirt">
+            <img src="./camisetas/arsenal.jpeg" alt="Arsenal">
+            <p>4 - Arsenal</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/arsenal2.jpeg" alt="Arsenal">
+            <p>5 - Arsenal</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/atletico-madrid.jpeg" alt="Atletico de Madrid">
+            <p>6 - Atletico de Madrid</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/atletico-mineiro.jpeg" alt="Atletico Mineiro">
+            <p>7 - Atletico Mineiro</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/barcelona.jpeg" alt="Barcelona">
+            <p>8 - Barcelona</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/barcelona2.jpeg" alt="Barcelona">
+            <p>9 - Barcelona</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/benfica.jpeg" alt="Benfica">
+            <p>10 - Benfica</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/boca.jpeg" alt="Boca Juniors">
+            <p>11 - Boca Juniors</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/borussia.jpeg" alt="Borussia Dortmund">
+            <p>12 - Borussia Dortmund</p>
+           </article>
+           
+           <article class="shirt">
+            <img src="./camisetas/borussia2.jpeg" alt="Borussia Dortmund">
+            <p>13 - Borussia Dortmund</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/borussia3.jpeg" alt="Borussia Dortmund">
+            <p>14 - Borussia Dortmund</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/botafogo.jpeg" alt="Botafogo">
+            <p>15 - Botafogo</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/cbf.jpeg" alt="Seleção Brasileira">
+            <p>16 - Seleção Brasileira</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/cbf2.jpeg" alt="Seleção Brasileira">
+            <p>17 - Seleção Brasileira</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/chelsea.jpeg" alt="Chelsea">
+            <p>18 - Chelsea</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/chelsea2.jpeg" alt="Chelsea">
+            <p>19 - Chelsea</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/cruzeiro.jpeg" alt="cruzeiro">
+            <p>20 - Cruzeiro</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/flamengo.jpeg" alt="Flamengo">
+            <p>21 - Flamengo</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/flamengo2.jpeg" alt="Flamengo">
+            <p>22 - Flamengo</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/flamengo3.jpeg" alt="Flamengo">
+            <p>23 - Flamengo</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/flamengo4.jpeg" alt="Flamengo">
+            <p>24 - Flamengo</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/flamengo5.jpeg" alt="Flamengo">
+            <p>25 - Flamengo</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/fluminense.jpeg" alt="Fluminense">
+            <p>26 - Fluminense</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/fluminense2.jpeg" alt="Fluminense">
+            <p>27 - Fluminense</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/franca.jpeg" alt="França">
+            <p>28 - França</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/inglaterra.jpeg" alt="Ingleterra">
+            <p>29 - Inglaterra</p>
+           </article>
+
         </section>
 
     </main>
