--- a/index.html
+++ b/index.html
@@ -168,6 +168,286 @@
             <p>29 - Inglaterra</p>
            </article>
 
+           <article class="shirt">
+            <img src="./camisetas/italia.jpeg" alt="Italia">
+            <p>30 - Italia</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/juventus.jpeg" alt="Juventus">
+            <p>31 - Juventus</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/juventus2.jpeg" alt="Juventus">
+            <p>32 - Juventus</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/juventus3.jpeg" alt="Juventus">
+            <p>33 - Juventus</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/leverkusen.jpeg" alt="Bayern Leverkusen">
+            <p>34 - Bayern Leverkusen</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/leverkusen2.jpeg" alt="Bayern Leverkusen">
+            <p>35 - Bayern Leverkusen</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/liverpool.jpeg" alt="Liverpool">
+            <p>36 - Liverpool</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/liverpool2.jpeg" alt="Liverpool">
+            <p>37 - Liverpool</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/liverpool3.jpeg" alt="Liverpool">
+            <p>38 - Liverpool</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/liverpool4.jpeg" alt="Liverpool">
+            <p>39 - Liverpool</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/lyon.jpeg" alt="Lyon">
+            <p>40 - Lyon</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/man-city.jpeg" alt="Manchester City">
+            <p>41 - Manchester City</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/man-city2.jpeg" alt="Manchester City">
+            <p>42 - Manchester City</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/man-city3.jpeg" alt="Manchester City">
+            <p>43 - Manchester City</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/man-united.jpeg" alt="Manchester United">
+            <p>44 - Manchester United</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/man-united2.jpeg" alt="Manchester United">
+            <p>45 - Manchester United</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/man-united3.jpeg" alt="Manchester United">
+            <p>46 - Manchester United</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/miami.jpeg" alt="Miami">
+            <p>47 - Miami</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/milan.jpeg" alt="Milan">
+            <p>48 - Milan</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/milan2.jpeg" alt="Milan">
+            <p>49 - Milan</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/milan3.jpeg" alt="Milan">
+            <p>50 - Milan</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/milan4.jpeg" alt="Milan">
+            <p>51 - Milan</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/milan5.jpeg" alt="Milan">
+            <p>52 - Milan</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/milan6.jpeg" alt="Milan">
+            <p>53 - Milan</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/newcastle.jpeg" alt="Newcastle">
+            <p>54 - Newcastle</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/olympique.jpeg" alt="Olympique de Marseille">
+            <p>55 - Olympique de Marseille</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/olympique2.jpeg" alt="Olympique de Marseille">
+            <p>56 - Olympique de Marseille</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/palmeiras.jpeg" alt="Palmeiras">
+            <p>57 - Palmeiras</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/palmeiras2.jpeg" alt="Palmeiras">
+            <p>58 - Palmeiras</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/palmeiras3.jpeg" alt="Palmeiras">
+            <p>59 - Palmeiras</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/palmeiras4.jpeg" alt="Palmeiras">
+            <p>60 - Palmeiras</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/psg.jpeg" alt="Paris Saint-German">
+            <p>61 - Paris Saint-German</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/psg2.jpeg" alt="Paris Saint-German">
+            <p>62 - Paris Saint-German</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/psg3.jpeg" alt="Paris Saint-German">
+            <p>63 - Paris Saint-German</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/real-madrid.jpeg" alt="Real Madrid">
+            <p>64 - Real Madrid</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/real-madrid2.jpeg" alt="Real Madrid">
+            <p>65 - Real Madrid</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/real-madrid3.jpeg" alt="Real Madrid">
+            <p>66 - Real Madrid</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/real-madrid4.jpeg" alt="Real Madrid">
+            <p>67 - Real Madrid</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/santos.jpeg" alt="Santos">
+            <p>68 - Santos</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/santos2.jpeg" alt="Santos">
+            <p>69 - Santos</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/santos3.jpeg" alt="Santos">
+            <p>70 - Santos</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/sccp.jpeg" alt="Corinthians">
+            <p>71 - Corinthians</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/sccp2.jpeg" alt="Corinthians">
+            <p>72 - Corinthians</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/sccp3.jpeg" alt="Corinthians">
+            <p>73 - Corinthians</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/sccp4.jpeg" alt="Corinthians">
+            <p>74 - Corinthians</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/sccp5.jpeg" alt="Corinthians">
+            <p>75 - Corinthians</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/sccp6.jpeg" alt="Corinthians">
+            <p>76 - Corinthians</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/sccp7.jpeg" alt="Corinthians">
+            <p>77 - Corinthians</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/spfc.jpeg" alt="São Paulo">
+            <p>78 - São Paulo</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/spfc2.jpeg" alt="São Paulo">
+            <p>79 - São Paulo</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/spfc3.jpeg" alt="São Paulo">
+            <p>80 - São Paulo</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/spfc4.jpeg" alt="São Paulo">
+            <p>81 - São Paulo</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/sporting.jpeg" alt="Sporting">
+            <p>82 - Sporting</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/spurs.jpeg" alt="Tottenham Hotspurs">
+            <p>83 - Tottemham Hotspurs</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/vasco.jpeg" alt="Vasco">
+            <p>84 - Vasco</p>
+           </article>
+
+           <article class="shirt">
+            <img src="./camisetas/vasco2.jpeg" alt="Vasco">
+            <p>85 - Vasco</p>
+           </article>
+
         </section>
 
     </main>
@@ -175,6 +455,12 @@
         <h1>
             Fala comigo!
         </h1>
+        <div class="link-img">
+            <a href="https://www.instagram.com/castrolinorocha/" target="_blank" rel="external"><img src="./imagens/favicon-32x32.png" alt="icone insta"></a>
+            <p>
+                 <a href="https://www.instagram.com/castrolinorocha/" target="_blank" rel="external">@castrolinorocha</a> - Instagram
+            </p>
+        </div>
     </footer>
     <div class="whats">
         <a href="https://wa.me/5511975064491" target="_blank"><img class="wpp-ico" src="./icones/wpp-ico.ico" alt="FALA COMIGO"></a>
