--- a/index.html
+++ b/index.html
@@ -30,16 +30,23 @@ Minhas observações:
         <h1>
             Guiga Shirts
         </h1>
-        <h2>
-            QUALQUER PEITA 170R$<br>
-            4 PEÇAS POR 600R$
-        </h2>
     </header>
     <nav>
         <a class="futebol" href="./index.html">Futebol &#x26BD</a>
         <a class="basquete" href="./page-basquete/index.html">Basquete &#x1F3C0</a>
     </nav>
     <main>
+        <section class="price-box">
+            <h2>
+                170R$ CADA PEÇA<br>
+                4 POR 600R$
+            </h2>
+
+            <P>
+                Gostou de alguma? Manda no zap o N° da peça. &#x1F525
+            </P>
+
+        </section>
         <section class="shirts-box">
            <ol>
                <article class="shirt">
