--- a/page-basquete/index.html
+++ b/page-basquete/index.html
@@ -5,25 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QUALQUER PEITA 170R$</title>
     <link rel="shortcut icon" href="../icones/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <header>
         <h1>
             Guiga Shirts
         </h1>
-        <h2>
-            QUALQUER PEITA 170R$<br>
-            4 PEÇAS POR 600R$
-        </h2>
+        
     </header>
     <nav>
         <a class="futebol" href="../index.html">Futebol &#x26BD</a>
         <a class="basquete" href="./index.html">Basquete &#x1F3C0</a>
     </nav>
     <main>
+        <section class="price-box">
+            <h2>
+                100R$ CADA PEÇA<br>
+                A PARTIR DE 4, SAI 80R$ CADA
+            </h2>
+
+            <P>
+                Gostou de alguma? Manda no zap o N° da peça. &#x1F525
+            </P>
+
+        </section>
         <section class="shirts-box">
-            <ol class="shirt-list" type="1">
+            <ol class="shirt-list" type="1" start="85">
 
                 <article class="shirt">
                     <img src="./camisetas-basquete/brooklin.jpeg" alt="Brooklin">
