--- a/page-basquete/index.html
+++ b/page-basquete/index.html
@@ -22,7 +22,7 @@
         <section class="price-box">
             <h2>
                 100R$ CADA PEÇA<br>
-                A PARTIR DE 4, SAI 80R$ CADA
+                4 POR 320R$
             </h2>
 
             <P>
