adição de peças

--- a/index.html
+++ b/index.html
@@ -136,6 +136,11 @@ Minhas observações:
                </article>
 
                <article class="shirt">
+                <img src="./camisetas/cbf3.jpeg" alt="Seleção Brasileira">
+                <li>Seleção Brasileira</li>
+               </article>
+
+               <article class="shirt">
                 <img src="./camisetas/chelsea.jpeg" alt="Chelsea">
                 <li>Chelsea</li>
                </article>
@@ -193,6 +198,11 @@ Minhas observações:
                <article class="shirt">
                 <img src="./camisetas/inglaterra.jpeg" alt="Ingleterra">
                 <li>Inglaterra</li>
+               </article>
+
+               <article class="shirt">
+                <img src="./camisetas/internazionale.jpeg" alt="Internazionale">
+                <li>Internazionale</li>
                </article>
 
                <article class="shirt">
@@ -346,6 +356,11 @@ Minhas observações:
                </article>
 
                <article class="shirt">
+                <img src="./camisetas/palmeiras5.jpeg" alt="Palmeiras">
+                <li>Palmeiras</li>
+               </article>
+
+               <article class="shirt">
                 <img src="./camisetas/psg.jpeg" alt="Paris Saint-German">
                 <li>Paris Saint-German</li>
                </article>
@@ -358,6 +373,11 @@ Minhas observações:
                <article class="shirt">
                 <img src="./camisetas/psg3.jpeg" alt="Paris Saint-German">
                 <li>Paris Saint-German</li>
+               </article>
+
+               <article class="shirt">
+                <img src="./camisetas/psv.jpeg" alt="Philips Sport Verening">
+                <li>Philips Sport Verening</li>
                </article>
 
                <article class="shirt">
@@ -447,6 +467,16 @@ Minhas observações:
 
                <article class="shirt">
                 <img src="./camisetas/spfc4.jpeg" alt="São Paulo">
+                <li>São Paulo</li>
+               </article>
+
+               <article class="shirt">
+                <img src="./camisetas/spfc5.jpeg" alt="São Paulo">
+                <li>São Paulo</li>
+               </article>
+
+               <article class="shirt">
+                <img src="./camisetas/spfc6.jpeg" alt="São Paulo">
                 <li>São Paulo</li>
                </article>
 
