--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@ Minhas observações:
 2. Adicionar esse mesmo efeito aos botões do nav e do possivel "voltar ao topo";
 2. Tirar a coloração azul do link do instagram;
 3. Estudar uma barra de pesquisa para colocar no site;
+4. Modificar a img de fundo (ampliar no photoshop);
+5. Padronizar o tamanho das imagens;
+6. Colocar um logo no header pra estilizar o titulo;
 
 -->
 
@@ -31,12 +34,17 @@ Minhas observações:
         <h1>
             Guiga Shirts
         </h1>
-    </header>
+    </header> 
+
     <nav>
-        <a class="futebol" href="./index.html">Futebol &#x26BD</a>
-        <a class="basquete" href="./page-basquete/index.html">Basquete &#x1F3C0</a>
+        <ul>
+            <li><a class="futebol" href="./index.html">Futebol &#x26BD</a></li>
+            <li><a class="basquete" href="./page-basquete/index.html">Basquete &#x1F3C0</a></li>
+        </ul>
     </nav>
+
     <main>
+        
         <section class="price-box">
             <h2>
                 170R$ CADA PEÇA<br>
@@ -44,7 +52,7 @@ Minhas observações:
             </h2>
 
             <P>
-                Gostou de alguma? Manda no zap o N° da peça. &#x1F525
+                Gostou de alguma? Manda no zap o N° da peça
             </P>
 
         </section>
