--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@ Minhas observações:
             </P>
 
         </section>
-        <section class="shirts-box">
-           <ol>
+        
+            <ol class="shirt-list">
                <article class="shirt">
                 <img src="./camisetas//ajax.jpeg" alt="Ajax">
                 <li>Ajax</li>
@@ -507,9 +507,7 @@ Minhas observações:
                 <img src="./camisetas/vasco2.jpeg" alt="Vasco">
                 <li>Vasco</li>
                </article>
-           </ol>
-
-        </section>
+        </ol>
 
     </main>
     <footer>
