Teste de repositório

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ Minhas observações:
 4. Modificar a img de fundo (ampliar no photoshop);
 5. Padronizar o tamanho das imagens;
 6. Colocar um logo no header pra estilizar o titulo;
+7. TESTE DE REPOSITÓRIO
 
 -->
 
