--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@ Minhas observações:
 4. Modificar a img de fundo (ampliar no photoshop);
 5. Padronizar o tamanho das imagens;
 6. Colocar um logo no header pra estilizar o titulo;
-7. TESTE DE REPOSITÓRIO
 
 -->
 
@@ -57,8 +56,8 @@ Minhas observações:
             </P>
 
         </section>
-        
-            <ol class="shirt-list">
+        <section class="shirts-box">
+           <ol>
                <article class="shirt">
                 <img src="./camisetas//ajax.jpeg" alt="Ajax">
                 <li>Ajax</li>
@@ -508,7 +507,9 @@ Minhas observações:
                 <img src="./camisetas/vasco2.jpeg" alt="Vasco">
                 <li>Vasco</li>
                </article>
-        </ol>
+           </ol>
+
+        </section>
 
     </main>
     <footer>
