footer enriquecido com p de divulgação

--- a/page-basquete/index.html
+++ b/page-basquete/index.html
@@ -105,12 +105,19 @@
         <h1>
             Fala comigo!
         </h1>
+        <p>
+            Temos promoções, fiquem ligados!
+        </p>
         <section class="link-img">
-            <a href="https://www.instagram.com/castrolinorocha/" target="_blank" rel="external"><img src="../imagens/favicon-32x32.png" alt="icone insta"></a>
+            <a href="https://www.instagram.com/castrolinorocha/" target="blank" rel="external"><img src="../imagens/favicon-32x32.png" alt="icone insta"></a>
             <p>
-                 <a href="https://www.instagram.com/castrolinorocha/" target="_blank" rel="external">@castrolinorocha</a> - Instagram
+                 <a href="https://www.instagram.com/castrolinorocha/" target="blank" rel="external">@castrolinorocha</a>
             </p>
         </section>
+        <p id="divulgacao">
+            Site desenvolvido por <strong>Pedro Henrique Rocha.</strong> - <a href="https://www.instagram.com/phguimarocha/" target="blank" rel="external">Instagram</a> - <a href="https://github.com/pedraocodes" target="blank" rel="external">Github</a>
+
+        </p>
     </footer>
     <div class="whats">
         <a href="https://wa.me/5511975064491" target="_blank"><img class="wpp-ico" src="../icones/wpp-ico.ico" alt="FALA COMIGO"></a>
