correção do tamanho das camisetas

--- a/index.html
+++ b/index.html
@@ -548,8 +548,7 @@ Minhas observações:
             </p>
         </section>
         <p id="divulgacao">
-            Site desenvolvido por <strong>Pedro Henrique Rocha.</strong> - <a href="https://www.instagram.com/phguimarocha/" target="blank" rel="external">Instagram</a> - <a href="https://github.com/pedraocodes" target="blank" rel="external">Github</a>
-
+            Site desenvolvido por <a href="https://www.instagram.com/phguimarocha/" target="blank" rel="external"><strong>Pedro Henrique Rocha.</strong></a>
         </p>
     </footer>
     <div class="whats">
