Nome dos times de basquete

--- a/page-basquete/index.html
+++ b/page-basquete/index.html
@@ -40,32 +40,32 @@
 
                 <article class="shirt">
                     <img src="./camisetas-basquete/brooklin.jpeg" alt="Brooklin">
-                    <li>Brooklin</li>
+                    <li>Brooklyn Nets</li>
                 </article>
                     
                 <article class="shirt">
                     <img src="./camisetas-basquete/bulls.jpeg" alt="Bulls">
-                    <li>Bulls</li>
+                    <li>Chicago Bulls</li>
                 </article>
 
                 <article class="shirt">
                     <img src="./camisetas-basquete/bulls2.jpeg" alt="Bulls">
-                    <li>Bulls</li>
+                    <li>Chicago Bulls</li>
                 </article>
 
                 <article class="shirt">
                     <img src="./camisetas-basquete/bulls3.jpeg" alt="Bulls">
-                    <li>Bulls</li>
+                    <li>Chicago Bulls</li>
                 </article>
 
                 <article class="shirt">
                     <img src="./camisetas-basquete/celtics.jpeg" alt="Celtics">
-                    <li>Celtics</li>
+                    <li>Boston Celtics</li>
                 </article>
 
                 <article class="shirt">
                     <img src="./camisetas-basquete/cleveland.jpeg" alt="Cleveland">
-                    <li>Cleveland</li>
+                    <li>Cleveland Cavaliers</li>
                 </article>
 
                 <article class="shirt">
@@ -75,7 +75,7 @@
 
                 <article class="shirt">
                     <img src="./camisetas-basquete/hornets.jpeg" alt="Hornets">
-                    <li>Hornets</li>
+                    <li>Charlotte Hornets</li>
                 </article>
 
                 <article class="shirt">
@@ -95,7 +95,7 @@
 
                 <article class="shirt">
                     <img src="./camisetas-basquete/miami.jpeg" alt="Miami">
-                    <li>Miami</li>
+                    <li>Miami Heat</li>
                 </article>
 
         </ol>
