novas camisetas e margin 1024

--- a/index.html
+++ b/index.html
@@ -120,6 +120,11 @@ Minhas observações:
                 </article>
 
                 <article class="shirt">
+                    <img src="./camisetas/bayern-munchen.jpeg" alt="Bayern de Munique">
+                    <li>Bayern de Munique</li>
+                </article>
+
+                <article class="shirt">
                     <img src="./camisetas/benfica.jpeg" alt="Benfica">
                     <li>Benfica</li>
                 </article>
@@ -230,6 +235,16 @@ Minhas observações:
                 </article>
 
                 <article class="shirt">
+                    <img src="./camisetas/internazionale2.jpeg" alt="Internazionale">
+                    <li>Internazionale</li>
+                </article>
+
+                <article class="shirt">
+                    <img src="./camisetas/internazionale3.jpeg" alt="Internazionale">
+                    <li>Internazionale</li>
+                </article>
+
+                <article class="shirt">
                     <img src="./camisetas/italia.jpeg" alt="Italia">
                     <li>Italia</li>
                 </article>
@@ -290,6 +305,11 @@ Minhas observações:
                 </article>
 
                 <article class="shirt">
+                    <img src="./camisetas/lyon2.jpeg" alt="Lyon">
+                    <li>Lyon</li>
+                </article>
+
+                <article class="shirt">
                     <img src="./camisetas/man-city.jpeg" alt="Manchester City">
                     <li>Manchester City</li>
                 </article>
@@ -325,6 +345,11 @@ Minhas observações:
                 </article>
 
                 <article class="shirt">
+                    <img src="./camisetas/miami2.jpeg" alt="Miami">
+                    <li>Miami</li>
+                </article>
+
+                <article class="shirt">
                     <img src="./camisetas/milan.jpeg" alt="Milan">
                     <li>Milan</li>
                 </article>
@@ -347,6 +372,11 @@ Minhas observações:
                 <article class="shirt">
                     <img src="./camisetas/milan6.jpeg" alt="Milan">
                     <li>Milan</li>
+                </article>
+
+                <article class="shirt">
+                    <img src="./camisetas/napoli.jpeg" alt="Napoli">
+                    <li>Napoli</li>
                 </article>
 
                 <article class="shirt">
@@ -427,6 +457,11 @@ Minhas observações:
                 <article class="shirt">
                     <img src="./camisetas/real-madrid4.jpeg" alt="Real Madrid">
                     <li>Real Madrid</li>
+                </article>
+
+                <article class="shirt">
+                    <img src="./camisetas/roma.jpeg" alt="Roma">
+                    <li>AS Roma</li>
                 </article>
 
                 <article class="shirt">
