--- a/page-basquete/index.html
+++ b/page-basquete/index.html
@@ -18,7 +18,7 @@
     <nav>
         <ul>
             <li><a class="futebol" href="../index.html">Futebol &#x26BD</a></li>
-            <li><a class="basquete" href="./page-basquete/index.html">Basquete &#x1F3C0</a></li>
+            <li><a class="basquete" href="#">Basquete &#x1F3C0</a></li>
         </ul>
     </nav>
 
