--- a/index.html
+++ b/index.html
@@ -38,9 +38,14 @@ Minhas observações:
     </header>
 
     <nav>
-        <ul>
-            <li><a class="futebol" href="./index.html">Futebol &#x26BD</a></li>
-            <li><a class="basquete" href="./page-basquete/index.html">Basquete &#x1F3C0</a></li>
+        <ul class="menu-externo">
+            <li><a href="#">Camisetas</a>
+                <ul class="menu-interno">
+                    <li><a href="./index.html">Futebol &#x26BD</a></li>
+                    <li><a href="./page-basquete/index.html">Basquete &#x1F3C0</a></li>
+                </ul>
+            </li>
+            <li><a href="#">Bonés</a></li>
         </ul>
     </nav>
 
