--- a/page-basquete/index.html
+++ b/page-basquete/index.html
@@ -16,9 +16,14 @@
     </header>
 
     <nav>
-        <ul>
-            <li><a class="futebol" href="../index.html">Futebol &#x26BD</a></li>
-            <li><a class="basquete" href="#">Basquete &#x1F3C0</a></li>
+        <ul class="menu-externo">
+            <li><a href="#">Camisetas</a>
+                <ul class="menu-interno">
+                    <li><a href="../index.html">Futebol &#x26BD</a></li>
+                    <li><a href="./index.html">Basquete &#x1F3C0</a></li>
+                </ul>
+            </li>
+            <li><a href="#">Bonés</a></li>
         </ul>
     </nav>
 
