--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@ Minhas observações:
             <li><a href="#">Camisetas</a>
                 <ul class="menu-interno">
                     <li><a href="./index.html">Futebol &#x26BD</a></li>
-                    <li><a href="./page-basquete/index.html">Basquete &#x1F3C0</a></li>
+                    <li><a href="./page-basquete/basquete.html">Basquete &#x1F3C0</a></li>
                 </ul>
             </li>
-            <li><a href="./page-bones/index.html">Bonés</a></li>
+            <li><a href="./page-bones/bones.html">Bonés</a></li>
         </ul>
     </nav>
 
