--- a/page-bones/bones.html
+++ b/page-bones/bones.html
@@ -22,10 +22,10 @@
             <li><a href="#">Camisetas</a>
                 <ul class="menu-interno">
                     <li><a href="../index.html">Futebol &#x26BD</a></li>
-                    <li><a href="../page-basquete/index.html">Basquete &#x1F3C0</a></li>
+                    <li><a href="../page-basquete/basquete.html">Basquete &#x1F3C0</a></li>
                 </ul>
             </li>
-            <li><a href="#">Bonés</a></li>
+            <li><a href="./bones.html">Bonés</a></li>
         </ul>
     </nav>
 
