valor das camisetas 200

--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@ Minhas observações:
 
             <article class="shirt">
                 <img src="./camisetas/sccp2.jpeg" alt="Corinthians">
-                <li>Corinthians</li>
+                <li>Corinthians (200 R$)</li>
             </article>
 
             <article class="shirt">
@@ -501,12 +501,12 @@ Minhas observações:
 
             <article class="shirt">
                 <img src="./camisetas/sccp4.jpeg" alt="Corinthians">
-                <li>Corinthians</li>
+                <li>Corinthians (200 R$)</li>
             </article>
 
             <article class="shirt">
                 <img src="./camisetas/sccp5.jpeg" alt="Corinthians">
-                <li>Corinthians</li>
+                <li>Corinthians (200 R$)</li>
             </article>
 
             <article class="shirt">
@@ -531,7 +531,7 @@ Minhas observações:
 
             <article class="shirt">
                 <img src="./camisetas/spfc3.jpeg" alt="São Paulo">
-                <li>São Paulo</li>
+                <li>São Paulo (200 R$)</li>
             </article>
 
             <article class="shirt">
@@ -541,12 +541,12 @@ Minhas observações:
 
             <article class="shirt">
                 <img src="./camisetas/spfc5.jpeg" alt="São Paulo">
-                <li>São Paulo</li>
+                <li>São Paulo (200 R$)</li>
             </article>
 
             <article class="shirt">
                 <img src="./camisetas/spfc6.jpeg" alt="São Paulo">
-                <li>São Paulo</li>
+                <li>São Paulo (200 R$)</li>
             </article>
 
             <article class="shirt">
