--- a/page-bones/bones.html
+++ b/page-bones/bones.html
@@ -43,7 +43,7 @@
 
         </section>
 
-        <ol class="shirt-list" type="1">
+        <ol class="shirt-list" type="1" start="114">
 
             <article class="shirt">
                 <img src="../page-bones/img-bones/argentina.jpeg" alt="Argentina">
