novas camiseta e copyright

--- a/page-basquete/basquete.html
+++ b/page-basquete/basquete.html
@@ -114,7 +114,7 @@
         </section>
         <p id="divulgacao">
             Site desenvolvido por <a href="https://www.instagram.com/phguimarocha/" target="blank"
-                rel="external"><strong>Pedro Henrique Rocha.</strong></a>
+                rel="external"><strong>Pedro Henrique Rocha &#169</strong></a>.
         </p>
     </footer>
     <div class="whats">
