--- a/index.html
+++ b/index.html
@@ -65,11 +65,6 @@ Minhas observações:
 
         <ol class="shirt-list" type="1">
             <article class="shirt">
-                <img src="./camisetas/ajax.jpeg" alt="Ajax">
-                <li>Ajax</li>
-            </article>
-
-            <article class="shirt">
                 <img src="./camisetas/ajax2.jpeg" alt="Ajax">
                 <li>Ajax</li>
             </article>
@@ -77,6 +72,11 @@ Minhas observações:
             <article class="shirt">
                 <img src="./camisetas/alemanha.jpeg" alt="Alemanha">
                 <li>Alemanha</li>
+            </article>
+
+            <article class="shirt">
+                <img src="./camisetas/argentina.jpeg" alt="Argentina">
+                <li>Seleção argentina</li>
             </article>
 
             <article class="shirt">
@@ -95,6 +95,11 @@ Minhas observações:
             </article>
 
             <article class="shirt">
+                <img src="./camisetas/arsenal4.jpeg" alt="Arsenal">
+                <li>Arsenal</li>
+            </article>
+
+            <article class="shirt">
                 <img src="./camisetas/atletico-madrid.jpeg" alt="Atletico de Madrid">
                 <li>Atletico de Madrid</li>
             </article>
@@ -106,11 +111,6 @@ Minhas observações:
 
             <article class="shirt">
                 <img src="./camisetas/barcelona.jpeg" alt="Barcelona">
-                <li>Barcelona</li>
-            </article>
-
-            <article class="shirt">
-                <img src="./camisetas/barcelona2.jpeg" alt="Barcelona">
                 <li>Barcelona</li>
             </article>
 
@@ -131,6 +131,16 @@ Minhas observações:
 
             <article class="shirt">
                 <img src="./camisetas/benfica.jpeg" alt="Benfica">
+                <li>Benfica</li>
+            </article>
+
+            <article class="shirt">
+                <img src="./camisetas/benfica2.jpeg" alt="Benfica">
+                <li>Benfica</li>
+            </article>
+
+            <article class="shirt">
+                <img src="./camisetas/benfica3.jpeg" alt="Benfica">
                 <li>Benfica</li>
             </article>
 
@@ -232,6 +242,11 @@ Minhas observações:
             <article class="shirt">
                 <img src="./camisetas/inglaterra.jpeg" alt="Ingleterra">
                 <li>Inglaterra</li>
+            </article>
+
+            <article class="shirt">
+                <img src="./camisetas/internacional.jpeg" alt="Internacional">
+                <li>Internacional</li>
             </article>
 
             <article class="shirt">
@@ -345,6 +360,11 @@ Minhas observações:
             </article>
 
             <article class="shirt">
+                <img src="./camisetas/man-united4.jpeg" alt="Manchester United">
+                <li>Manchester United</li>
+            </article>
+
+            <article class="shirt">
                 <img src="./camisetas/miami.jpeg" alt="Miami">
                 <li>Miami</li>
             </article>
@@ -425,18 +445,13 @@ Minhas observações:
             </article>
 
             <article class="shirt">
-                <img src="./camisetas/psg.jpeg" alt="Paris Saint-German">
-                <li>Paris Saint-German</li>
+                <img src="./camisetas/psg2.jpeg" alt="Paris Saint-Germain">
+                <li>Paris Saint-Germain</li>
             </article>
 
             <article class="shirt">
-                <img src="./camisetas/psg2.jpeg" alt="Paris Saint-German">
-                <li>Paris Saint-German</li>
-            </article>
-
-            <article class="shirt">
-                <img src="./camisetas/psg3.jpeg" alt="Paris Saint-German">
-                <li>Paris Saint-German</li>
+                <img src="./camisetas/psg3.jpeg" alt="Paris Saint-Germain">
+                <li>Paris Saint-Germain</li>
             </article>
 
             <article class="shirt">
@@ -446,6 +461,11 @@ Minhas observações:
 
             <article class="shirt">
                 <img src="./camisetas/real-madrid.jpeg" alt="Real Madrid">
+                <li>Real Madrid</li>
+            </article>
+
+            <article class="shirt">
+                <img src="./camisetas/real-madrid5.jpeg" alt="Real Madrid">
                 <li>Real Madrid</li>
             </article>
 
@@ -587,7 +607,7 @@ Minhas observações:
         </section>
         <p id="divulgacao">
             Site desenvolvido por <a href="https://www.instagram.com/phguimarocha/" target="blank"
-                rel="external"><strong>Pedro Henrique Rocha.</strong></a>
+                rel="external"><strong>Pedro Henrique Rocha &#169</strong></a>.
         </p>
     </footer>
     <div class="whats">
