--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="GUIGA SHIRTS" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://pedraocodes.github.io/camisetas-do-gui/index.html" />
+    <meta property="og:image" content="https://ia.media-imdb.com/images/rock.jpg" />
     <title>GUIGA SHIRTS</title>
     <link rel="shortcut icon" href="./icones/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
