--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <meta property="og:title" content="GUIGA SHIRTS" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://pedraocodes.github.io/camisetas-do-gui/index.html" />
-    <meta property="og:image" content="https://ia.media-imdb.com/images/rock.jpg" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/pedraocodes/camisetas-do-gui/refs/heads/main/imagens/preview.jpg" />
+    <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/pedraocodes/camisetas-do-gui/refs/heads/main/imagens/preview.jpg" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="834" />
+    <meta property="og:image:height" content="176" />
     <title>GUIGA SHIRTS</title>
     <link rel="shortcut icon" href="./icones/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
