--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="GUIGA SHIRTS" />
     <meta property="og:type" content="website" />
+    <meta property="og:description" content="Qualidade garantida, da melhor fonte tailandesa. Fala comigo!">
     <meta property="og:url" content="https://pedraocodes.github.io/camisetas-do-gui/index.html" />
     <meta property="og:image" content="https://raw.githubusercontent.com/pedraocodes/camisetas-do-gui/refs/heads/main/imagens/preview.jpg" />
     <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/pedraocodes/camisetas-do-gui/refs/heads/main/imagens/preview.jpg" />
