estendi os meta para todas as paginas

--- a/page-basquete/basquete.html
+++ b/page-basquete/basquete.html
@@ -4,6 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="GUIGA SHIRTS" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="Qualidade garantida, da melhor fonte tailandesa. Fala comigo!">
+    <meta property="og:url" content="https://pedraocodes.github.io/camisetas-do-gui/index.html" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/pedraocodes/camisetas-do-gui/refs/heads/main/imagens/preview.jpg" />
+    <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/pedraocodes/camisetas-do-gui/refs/heads/main/imagens/preview.jpg" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <title>GUIGA SHIRTS</title>
     <link rel="shortcut icon" href="../icones/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../style.css">
